# super_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  setup.py
agent_cards/: data_agent.json  finance_agent.json  info_agent.json  weather_agent.json
logs/: .gitkeep
src/: __init__.py  cli.py
src/agents/: __init__.py  base_agent.py  data_agent.py  finance_agent.py  info_agent.py  weather_agent.py
src/mcp/: __init__.py  server.py
src/mcp/resources/: __init__.py
src/mcp/tools/: __init__.py
src/orchestrator/: __init__.py  main.py  mcp_client.py  state.py  supervisor.py
tests/: __init__.py  test_agents.py  test_orchestrator.py
